# fuhrerschein_ki_trainer

./: .env.example  .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml
data/: convert_questions.py  questions.json  questions_loader.py
db/: database.py  ollama_service.py
templates/: index.html  practice.html  topics.html
